@@ -25,12 +25,12 @@ import java.awt.event.KeyEvent;
 import java.util.Set;
 
 import bricksnspace.j3dgeom.Point3D;
-import bricksnspace.ldraw3d.ConnectionHandler;
 import bricksnspace.ldraw3d.DrawHelpers;
 import bricksnspace.ldraw3d.LDRenderedPart;
 import bricksnspace.ldraw3d.LDrawGLDisplay;
 import bricksnspace.ldraw3d.PickMode;
 import bricksnspace.ldraw3d.DrawHelpers.PointerMode;
+import bricksnspace.ldrawlib.ConnectionHandler;
 import bricksnspace.ldrawlib.ConnectionPoint;
 import bricksnspace.ldrawlib.LDPrimitive;
 import bricksnspace.simpleundo.Undo;
@@ -246,12 +246,12 @@ public class DuplicatePartModePlugin implements LDEditorPlugin {
 
 
 	@Override
-	public void doWindowSelected(Set<Integer> selected) { }
+	public void doWindowSelected(Set<Integer> selected) { /* do nothing */ }
 
 
 
 	@Override
-	public void doColorchanged(int colorIndex) { }
+	public void doColorchanged(int colorIndex) { /* do nothing */ }
 
 
 
@@ -271,15 +271,22 @@ public class DuplicatePartModePlugin implements LDEditorPlugin {
 
 	@Override
 	public void doStepChanged(int step) {
-				
+		// do nothing
 	}
 
 
 
 	@Override
 	public boolean needSelection() {
-
+		
 		return false;
+	}
+
+
+
+	@Override
+	public void doDragParts(int partId) {
+		// do nothing
 	}
 
 	
